--- a/app_front/package.json
+++ b/app_front/package.json
@@ -10,6 +10,8 @@
         "@material-ui/pickers": "^3.3.10",
         "@reactchartjs/react-chart.js": "^1.0.0-rc.4",
         "@reduxjs/toolkit": "^1.5.1",
+        "@stripe/react-stripe-js": "github:stripe/react-stripe-js",
+        "@stripe/stripe-js": "github:stripe/stripe-js",
         "@testing-library/jest-dom": "^5.12.0",
         "@testing-library/react": "^11.2.6",
         "@testing-library/user-event": "^12.8.3",
@@ -23,6 +25,7 @@
         "react-bootstrap": "^1.5.2",
         "react-chartjs-2": "^3.0.3",
         "react-client-session": "0.0.7",
+        "react-copy-to-clipboard": "^5.0.3",
         "react-dom": "^17.0.2",
         "react-intl-tel-input": "^8.0.4",
         "react-number-format": "^4.5.5",
