--- a/appbackEnd/composer.json
+++ b/appbackEnd/composer.json
@@ -9,10 +9,12 @@
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "laravel/cashier": "^13.3",
         "laravel/framework": "^8.12",
         "laravel/passport": "^10.1",
         "laravel/tinker": "^2.5",
-        "nesbot/carbon": "^2.49"
+        "nesbot/carbon": "^2.49",
+        "stripe/stripe-php": "^7.87"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
